@@ -22,6 +22,7 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 
 public class PythonProcessConfig {
@@ -29,21 +30,20 @@ public class PythonProcessConfig {
     private final String pythonCommand;
     private final File pythonFrameworkDirectory;
     private final List<File> pythonExtensionsDirectories;
+    private final List<File> narDirectories;
     private final File pythonWorkingDirectory;
-    private final File pythonLogsDirectory;
     private final Duration commsTimeout;
     private final int maxPythonProcesses;
     private final int maxPythonProcessesPerType;
     private final boolean debugController;
     private final String debugHost;
     private final int debugPort;
-    private final File debugLogsDirectory;
 
     private PythonProcessConfig(final Builder builder) {
         this.pythonCommand = builder.pythonCommand;
         this.pythonFrameworkDirectory = builder.pythonFrameworkDirectory;
         this.pythonExtensionsDirectories = builder.pythonExtensionsDirectories;
-        this.pythonLogsDirectory = builder.pythonLogsDirectory;
+        this.narDirectories = builder.narDirectories;
         this.pythonWorkingDirectory = builder.pythonWorkingDirectory;
         this.commsTimeout = builder.commsTimeout;
         this.maxPythonProcesses = builder.maxProcesses;
@@ -51,7 +51,6 @@ public class PythonProcessConfig {
         this.debugController = builder.debugController;
         this.debugPort = builder.debugPort;
         this.debugHost = builder.debugHost;
-        this.debugLogsDirectory = builder.debugLogsDirectory;
     }
 
     public String getPythonCommand() {
@@ -66,8 +65,8 @@ public class PythonProcessConfig {
         return pythonExtensionsDirectories;
     }
 
-    public File getPythonLogsDirectory() {
-        return pythonLogsDirectory;
+    public List<File> getNarDirectories() {
+        return narDirectories;
     }
 
     public File getPythonWorkingDirectory() {
@@ -98,15 +97,11 @@ public class PythonProcessConfig {
         return debugPort;
     }
 
-    public File getDebugLogsDirectory() {
-        return debugLogsDirectory;
-    }
-
     public static class Builder {
         private String pythonCommand = "python3";
         private File pythonFrameworkDirectory = new File("python/framework");
-        private List<File> pythonExtensionsDirectories = Collections.singletonList(new File("python/extensions"));
-        private File pythonLogsDirectory = new File("./logs");
+        private List<File> pythonExtensionsDirectories = List.of(new File("python/extensions"));
+        private List<File> narDirectories = Collections.emptyList();
         private File pythonWorkingDirectory = new File("python");
         private Duration commsTimeout = Duration.ofSeconds(0);
         private int maxProcesses;
@@ -114,7 +109,6 @@ public class PythonProcessConfig {
         private boolean debugController = false;
         private String debugHost = "localhost";
         private int debugPort = 5678;
-        private File debugLogsDirectory = new File("logs/");
 
 
         public Builder pythonCommand(final String command) {
@@ -129,6 +123,11 @@ public class PythonProcessConfig {
 
         public Builder pythonExtensionsDirectories(final Collection<File> pythonExtensionsDirectories) {
             this.pythonExtensionsDirectories = new ArrayList<>(pythonExtensionsDirectories);
+            return this;
+        }
+
+        public Builder narDirectories(final Collection<File> narDirectories) {
+            this.narDirectories = new ArrayList<>(new HashSet<>(narDirectories));
             return this;
         }
 
@@ -164,11 +163,6 @@ public class PythonProcessConfig {
             return this;
         }
 
-        public Builder pythonLogsDirectory(final File logsDirectory) {
-            this.pythonLogsDirectory = logsDirectory;
-            return this;
-        }
-
         public Builder enableControllerDebug(final boolean enableDebug) {
             this.debugController = enableDebug;
             return this;
@@ -181,11 +175,6 @@ public class PythonProcessConfig {
 
         public Builder debugHost(final String debugHost) {
             this.debugHost = debugHost;
-            return this;
-        }
-
-        public Builder debugLogsDirectory(final File debugLogsDirectory) {
-            this.debugLogsDirectory = debugLogsDirectory;
             return this;
         }
 
